--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,6 +18,7 @@ a {
 }
 .img-thumbnail{
   max-height: 200px !important;
+  min-height: 200px !important;
   /* max-width: 230px !important; */
 }
 .thumb{
